--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -30,6 +30,7 @@
   );
 
   --Personal-colors-black: #000;
+  --Personal-colors-main: #4772e6;
   --Personal-colors-White: #fff;
   --Personal-colors-Green: #48d23c;
   --Personal-colors-green-hover: #6bda62;
