--- a/src/features/barSubprofileFilter/UI/styles.module.scss
+++ b/src/features/barSubprofileFilter/UI/styles.module.scss
@@ -4,7 +4,7 @@
   ul {
     display: grid;
     grid-auto-flow: column;
-    justify-content: space-between;
+    justify-content: space-around;
   }
   li {
     display: grid;
