--- a/src/shared/styles/reset.scss
+++ b/src/shared/styles/reset.scss
@@ -74,6 +74,17 @@ address {
 
 /* Form */
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 input,
 textarea,
 button,
