--- a/src/features/postText/UI/styles.module.scss
+++ b/src/features/postText/UI/styles.module.scss
@@ -2,22 +2,32 @@
   display: grid;
   grid-auto-flow: column;
   column-gap: 5px;
-  align-items: center;
+  align-items: start;
   justify-content: start;
   padding: 20px;
-  color: var(--Text-sample, #a3a0a0);
+
   border-radius: 15px;
   border: 1px solid var(--Containers, #8c8c8c);
   background: #fff;
 
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+  svg {
+    margin-top: 3px;
+    width: 12px;
+    height: 12px;
+  }
 
   textarea {
-    width: 100%;
+    // width: 100%;
     resize: none;
     outline: none;
+    color: var(--Personal-colors-black);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+
+    &::placeholder {
+      color: var(--Text-sample, #a3a0a0);
+    }
   }
 }
