--- a/src/features/historyCard/UI/styles.module.scss
+++ b/src/features/historyCard/UI/styles.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
   display: grid;
-  grid-auto-flow: column;
+  // grid-auto-flow: column;
+  grid-template: 1fr / 1fr 1fr 1fr 1fr 1.5fr;
   align-items: center;
 
   border-radius: 12px;
