--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -55,6 +55,10 @@ body {
   margin: 0 auto;
 }
 
+.layout {
+  background: var(--Gradients-Gradient-1);
+}
+
 .sidebar {
   padding-left: 75px;
 }
@@ -152,3 +156,20 @@ body {
     line-height: normal;
   }
 }
+
+// .scroll {
+//   overflow-y: scroll;
+
+//   &::-webkit-scrollbar {
+//     width: 2px;
+//     height: 2px;
+//     border-radius: 5px;
+//     cursor: pointer;
+//   }
+
+//   &::-webkit-scrollbar-thumb {
+//     cursor: pointer;
+//     background-color: #999;
+//     border-radius: 5px;
+//   }
+// }
