--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -38,7 +38,7 @@
   --Orange: #ffa04f;
 
   --Text-sample: #a3a0a0;
-  --choosen-text: #808080;
+  --Sub-text: #4d4d4d --choosen-text: #808080;
   --Inside-container: #bdbdbd;
   --Personal-colors-grey: #bdbdbd;
 
