--- a/src/widgets/catalogBlock/UI/catalogList/UI/styles.module.scss
+++ b/src/widgets/catalogBlock/UI/catalogList/UI/styles.module.scss
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: space-between;
 
-  span {
+  big {
     color: var(--Personal-colors-black);
 
     text-align: center;
