fix: add more logig in Cart page, some fix in CatalogCard

--- a/src/features/formatList/UI/styles.module.scss
+++ b/src/features/formatList/UI/styles.module.scss
@@ -52,6 +52,12 @@
 
   background: #fff;
 
+  ul {
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 2px;
+  }
+
   li {
     display: grid;
     grid-auto-flow: column;
