--- a/src/features/createPost/UI/styles.module.scss
+++ b/src/features/createPost/UI/styles.module.scss
@@ -1,19 +1,21 @@
 .button {
-  border-radius: 8px;
-  border: 1px solid #4772e6;
   padding: 10px;
-
-  font-size: 14px;
+  font-size: 20px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   line-height: normal;
-  color: var(--Gradients-Gradient-1);
+  color: var(--Personal-colors-White);
   background: none;
+  width: 100%;
+
+  border-radius: 12px;
+  background: var(--Personal-colors-Green, #48d23c);
 
   div {
     display: grid;
     grid-auto-flow: column;
     column-gap: 10px;
     justify-content: center;
+    align-items: center;
   }
 }
