--- a/src/widgets/catalogBlock/UI/catalogCart/UI/styles.module.scss
+++ b/src/widgets/catalogBlock/UI/catalogCart/UI/styles.module.scss
@@ -28,5 +28,11 @@
     justify-content: end;
     align-items: center;
     margin-right: 40px;
+
+    .button {
+      padding: 15px 50px;
+      opacity: 1;
+      background: var(--Personal-colors-Green);
+    }
   }
 }
