--- a/src/features/paymentCard/UI/styles.module.scss
+++ b/src/features/paymentCard/UI/styles.module.scss
@@ -2,6 +2,7 @@
   border-radius: 8px;
   border: 1px solid #4772e6;
   padding: 10px;
+  height: 40px;
 
   font-size: 14px;
   font-style: normal;
@@ -9,4 +10,9 @@
   line-height: normal;
   color: var(--Gradients-Gradient-1);
   background: none;
+}
+
+.fetch_error {
+  border: 1px solid red;
+  color: red;
 }
