--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -42,6 +42,7 @@
   --choosen-text: #808080;
   --Inside-container: #bdbdbd;
   --Personal-colors-grey: #bdbdbd;
+  --Containers: #8c8c8c;
 
   --woman: 50;
   --man: 50%;
