--- a/src/widgets/header/UI/chat/styles.module.scss
+++ b/src/widgets/header/UI/chat/styles.module.scss
@@ -61,6 +61,7 @@
         align-items: center;
         justify-content: space-between;
         padding: 10px 10px 10px 35px;
+        border-top: 0.5px solid rgba(0, 0, 0, 0.3);
         cursor: pointer;
 
         div {
