--- a/src/widgets/createOrderBlock/UI/createOrderDatetime/UI/styles.module.scss
+++ b/src/widgets/createOrderBlock/UI/createOrderDatetime/UI/styles.module.scss
@@ -4,7 +4,7 @@
   row-gap: 30px;
   padding-top: 30px;
   margin-bottom: 100px;
-  .content {
+  .top {
     display: grid;
     grid-auto-flow: column;
     align-items: center;
@@ -41,11 +41,23 @@
     }
   }
 
-  .cards {
+  .content {
     display: grid;
     grid-auto-flow: row;
-    row-gap: 15px;
+    row-gap: 30px;
     padding-left: 110px;
-    max-width: 850px;
+
+    .cards {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 15px;
+      max-width: 850px;
+    }
+
+    .continue {
+      display: grid;
+      align-items: center;
+      justify-content: start;
+    }
   }
 }
