--- a/src/features/calendar/UI/styles.scss
+++ b/src/features/calendar/UI/styles.scss
@@ -86,6 +86,10 @@
     font-weight: bold;
   }
 
+  // &__month-view__days__day, &__month-view__weekdays__weekday  {
+  //   flex: 0 0 13% !important;
+  // }
+
   &__month-view__days__day--weekend {
     color: var(--Gradients-Gradient-1);
   }
@@ -153,14 +157,16 @@
 
     &--range {
       background: rgba(71, 113, 230, 0.5);
+      // border-radius: 6px !important;
       border-radius: 0;
     }
 
     &--rangeStart {
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
-      border-top-left-radius: 6px;
-      border-bottom-left-radius: 6px;
+      border-radius: 6px;
+      // border-top-left-radius: 6px;
+      // border-bottom-left-radius: 6px;
       background: var(--Gradients-Gradient-1);
       color: white;
     }
@@ -168,8 +174,9 @@
     &--rangeEnd {
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
-      border-top-right-radius: 6px;
-      border-bottom-right-radius: 6px;
+      border-radius: 6px;
+      // border-top-right-radius: 6px;
+      // border-bottom-right-radius: 6px;
       background: var(--Gradients-Gradient-1);
       color: white;
     }
