--- a/src/features/postPlatform/UI/styles.module.scss
+++ b/src/features/postPlatform/UI/styles.module.scss
@@ -15,6 +15,9 @@
   align-items: center;
   justify-content: start;
   column-gap: 10px;
+  width: 100%;
+  height: 100%;
+  border-right: 0.5px solid var(--Containers);
   // border-right: 0.5px solid var(--Containers);
 }
 
@@ -52,7 +55,10 @@
 .type {
   display: grid;
   align-items: center;
-  // border-right: 0.5px solid var(--Containers);
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-right: 0.5px solid var(--Containers);
   svg {
     width: 30px;
     height: 30px;
