fix: fix styles Calendar, Create Order Cards 2

--- a/src/features/catalogCard/UI/styles.module.scss
+++ b/src/features/catalogCard/UI/styles.module.scss
@@ -3,7 +3,8 @@
   grid-auto-flow: row;
 
   border-radius: 15px;
-  border: 0.5px solid #8c8c8c;
+  // border: 0.5px solid #8c8c8c;
+  box-shadow: inset 0px 0px 0px 0.5px #8c8c8c;
   background: #fff;
   position: relative;
 
