--- a/src/widgets/createOrderBlock/UI/createOrderDatetime/UI/styles.module.scss
+++ b/src/widgets/createOrderBlock/UI/createOrderDatetime/UI/styles.module.scss
@@ -3,7 +3,7 @@
   grid-auto-flow: row;
   row-gap: 30px;
   padding-top: 30px;
-  margin-bottom: 100px;
+  padding-bottom: 100px;
   .top {
     display: grid;
     grid-auto-flow: column;
