--- a/src/widgets/createOrderBlock/UI/createOrderPost/UI/styles.module.scss
+++ b/src/widgets/createOrderBlock/UI/createOrderPost/UI/styles.module.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-auto-flow: row;
   row-gap: 20px;
-  margin-bottom: 50px;
+  padding-bottom: 50px;
 
   .content {
     display: grid;
