--- a/src/widgets/createOrderBlock/UI/createOrderTop/UI/styles.module.scss
+++ b/src/widgets/createOrderBlock/UI/createOrderTop/UI/styles.module.scss
@@ -65,7 +65,8 @@
       max-width: 450px;
       justify-content: space-between;
       border-radius: 30px;
-      border: 1px solid #fff;
+      // border: 1px solid #fff;
+      box-shadow: inset 0px 0px 0px 1px #fff;
       background: rgba(255, 255, 255, 0);
 
       button {
