feat: addChannel logic with rtk queries

--- a/src/features/selectOptions/UI/styles.module.scss
+++ b/src/features/selectOptions/UI/styles.module.scss
@@ -164,6 +164,10 @@
       cursor: pointer;
       padding: 10px;
 
+      input {
+        cursor: pointer;
+      }
+
       &.filter {
         column-gap: 5px;
         justify-content: start;
