--- a/src/shared/styles/reset.scss
+++ b/src/shared/styles/reset.scss
@@ -74,15 +74,14 @@ address {
 
 /* Form */
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-/* Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 input,
