--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -35,6 +35,7 @@
   --Personal-colors-Green: #48d23c;
   --Personal-colors-green-hover: #6bda62;
   --Personal-colors-Click: #efe6ff;
+  --Personal-colors-Error: rgba(254, 52, 48, 0.99);
   --Orange: #ffa04f;
 
   --Text-sample: #a3a0a0;
