--- a/src/features/createPlatform/UI/styles.module.scss
+++ b/src/features/createPlatform/UI/styles.module.scss
@@ -1,7 +1,7 @@
 .button {
   border-radius: 8px;
   padding: 10px;
-
+  width: 100%;
   font-size: 26px;
   font-style: normal;
   font-weight: 500;
