--- a/src/features/createPlatform/UI/styles.module.scss
+++ b/src/features/createPlatform/UI/styles.module.scss
@@ -85,7 +85,7 @@
 
 .accept__btn {
   padding: 10px;
-  width: auto;
+  width: 100%;
   justify-content: center;
   align-items: center;
   border: 1px solid #4772e6;
