fix: fix comments on my Channels page and refactor styles

--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -44,6 +44,7 @@
   --Inside-container: #bdbdbd;
   --Personal-colors-grey: #bdbdbd;
   --Containers: #8c8c8c;
+  --Card-separator: #d9d9d9;
 
   --woman: 50;
   --man: 50%;
