--- a/src/features/bloggerPlatformCard/UI/styles.module.scss
+++ b/src/features/bloggerPlatformCard/UI/styles.module.scss
@@ -2,190 +2,223 @@
   display: grid;
   grid-auto-flow: row;
   border-radius: 12px;
-  border: 1px solid #4772e6;
+  box-shadow: inset 0px 0px 0px 1px var(--Personal-colors-main);
   padding-top: 20px;
-  margin-bottom: 10px;
   width: 100%;
 
   hr {
     height: 1px;
-    background: #d9d9d9;
+    background: var(--Card-separator);
     margin-bottom: 20px;
   }
-}
 
-.card__top {
-  display: grid;
-  grid-auto-flow: column;
-  justify-content: space-between;
-}
-
-.channel__logo {
-  display: grid;
-  align-items: center;
-  justify-items: center;
-  border-right: 1px solid #d9d9d9;
-  margin-left: 20px;
-  padding-right: 20px;
-
-  img {
-    width: 64px;
-    height: 64px;
-    border-radius: 64px;
-    border: 0.5px solid var(--Gradients-Gradient-1);
-  }
-
-  svg {
-    max-width: 80px;
-  }
-}
-
-.card__description {
-  display: grid;
-  grid-auto-flow: row;
-  border-right: 1px solid #d9d9d9;
-  margin-left: 20px;
-  padding-right: 20px;
-
-  div {
+  .card__top {
     display: grid;
-    grid-auto-flow: column;
+    grid-template: 1fr / 1fr 3fr 4fr 0.4fr;
+    margin-bottom: 20px;
 
-    div {
+    .channel__logo {
+      display: grid;
+      align-items: center;
+      justify-items: center;
+      border-right: 1px solid var(--Card-separator);
+      margin-left: 20px;
+      padding-right: 20px;
+
+      img {
+        width: 64px;
+        height: 64px;
+        border-radius: 64px;
+        border: 0.5px solid var(--Gradients-Gradient-1);
+      }
+
+      svg {
+        max-width: 80px;
+      }
+    }
+
+    .card__description {
       display: grid;
       grid-auto-flow: row;
-      padding-bottom: 10px;
+      border-right: 1px solid var(--Card-separator);
+      margin-left: 20px;
+      padding-right: 20px;
 
-      p {
-        color: car(--Personal-colors-black);
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 0.75;
-      }
-
-      span {
-        color: rgba(0, 0, 0, 0.6);
-        font-size: 12px;
-        font-style: normal;
-        font-weight: 500;
-        // line-height: 0.75;
-      }
-
-      div {
+      &__top {
         display: grid;
         grid-auto-flow: column;
-        column-gap: 10px;
+        padding-bottom: 10px;
+        align-items: end;
+        border-bottom: 1px solid var(--Card-separator);
+        margin-bottom: 20px;
+
+        &__text {
+          display: grid;
+          grid-auto-flow: row;
+          row-gap: 10px;
+
+          p {
+            color: car(--Personal-colors-black);
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 0.75;
+          }
+
+          span {
+            color: rgba(0, 0, 0, 0.6);
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 500;
+          }
+
+          div {
+            display: grid;
+            grid-auto-flow: column;
+            column-gap: 10px;
+          }
+        }
+
+        &__icons {
+          display: grid;
+
+          div {
+            display: grid;
+            grid-auto-flow: column;
+            column-gap: 10px;
+            justify-content: end;
+
+            svg {
+              width: auto;
+              height: 30px;
+            }
+          }
+        }
+      }
+
+      .status {
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        border-radius: 12px;
+        background: rgba(15, 105, 201, 0.1);
+        padding: 26px 0;
+
+        p {
+          color: var(--Personal-colors-black);
+          font-size: 24px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 0.75;
+        }
+      }
+    }
+
+    .card__info {
+      display: grid;
+      grid-template: 1fr 0.5fr / 1fr;
+      border-right: 1px solid var(--Card-separator);
+      margin-left: 20px;
+      padding-right: 20px;
+
+      &__top {
+        display: grid;
+        grid-auto-flow: row;
+        padding-bottom: 10px;
+        border-bottom: 1px solid var(--Card-separator);
+        margin-bottom: 20px;
+        align-items: center;
+        align-content: center;
+        text-align: center;
+
+        span {
+          color: var(--Personal-colors-black);
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: normal;
+        }
+      }
+
+      &__offers {
+        display: grid;
+        grid-template: 1fr / 1fr 2fr;
+        align-items: center;
+        justify-content: space-between;
+        padding-bottom: 10px;
+        border-bottom: 1px solid var(--Card-separator);
+        margin-bottom: 20px;
+
+        p {
+          color: var(--Personal-colors-black);
+          font-size: 20px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: normal;
+        }
+
+        small {
+          color: var(--Personal-colors-black);
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: normal;
+        }
+      }
+
+      &__bottom {
+        display: grid;
+        grid-template: 1fr/ 1fr 1fr 1fr 1fr;
+        column-gap: 20px;
+        // grid-auto-flow: column;
+        align-items: center;
+        justify-content: space-between;
+        color: var(--Personal-colors-black);
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+
+        div {
+          display: grid;
+          grid-auto-flow: column;
+          align-items: center;
+          column-gap: 10px;
+
+          padding: 8px 20px;
+          border-radius: 8px;
+          border: 1px solid var(--Personal-colors-main);
+        }
+      }
+
+      &__bottom2 {
+        display: grid;
+        grid-template: 1fr / 1fr 1fr;
+        column-gap: 20px;
+        align-items: center;
+        justify-content: space-between;
+      }
+    }
+
+    .card__more {
+      padding: 0 15px;
+      display: grid;
+      grid-auto-flow: row;
+      justify-content: space-between;
+
+      svg {
+        width: 30px;
       }
     }
   }
 }
 
-.status {
-  display: grid;
-  align-items: center;
-  justify-content: center;
-  border-radius: 12px;
-  background: rgba(15, 105, 201, 0.1);
-  padding: 20px 0;
-
-  p {
-    color: var(--Personal-colors-black);
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
-}
-
-.card__right {
-  display: grid;
-  grid-auto-flow: row;
-  border-right: 1px solid #d9d9d9;
-  margin-left: 20px;
-  padding-right: 20px;
-}
-
-.card__info {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: space-between;
-  color: var(--Personal-colors-black);
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-
-  div {
-    display: grid;
-    grid-auto-flow: column;
-    align-items: center;
-    column-gap: 10px;
-
-    padding: 10px 20px;
-    border-radius: 8px;
-    border: 1px solid #4772e6;
-  }
-}
-
-.card__info2 {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.card__offers {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 10px;
-
-  p {
-    color: var(--Personal-colors-black);
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-  }
-
-  small {
-    color: var(--Personal-colors-black);
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
-}
-
-.offers_exist {
-  color: var(--Gradients-Gradient-2);
-}
-
-.card__more {
-  padding: 0 15px;
-  display: grid;
-  grid-auto-flow: row;
-  justify-content: space-between;
-
-  svg {
-    width: 30px;
-  }
-}
-
 .card__btn {
   padding: 11px 0;
-  width: 100%;
-
-  color: #fff;
   font-size: 12px;
   font-style: normal;
   font-weight: 500;
-  line-height: normal;
   line-height: 0.75;
-  border-radius: 12px;
 }
 
 .more {
@@ -200,16 +233,17 @@
 
 .platform_events {
   display: grid;
-  grid-auto-flow: column;
-  justify-content: space-between;
+  grid-template: 1fr /1fr 1fr 1fr;
+  column-gap: 20px;
   margin-top: 10px;
   padding: 10px 10px 0px 10px;
   border-radius: 12px;
   border-top: 1px solid var(--Gradients-Gradient-1);
+  margin-bottom: 20px;
 
   button {
     border-radius: 8px;
-    border: 1px solid #4772e6;
+    border: 1px solid var(--Personal-colors-main);
 
     p {
       color: var(--Gradients-Gradient-1);
